# IssueSuite

./: .bandit  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CI_FIXES_AND_ENHANCEMENTS.md  CONTRIBUTING.md  DELETE_AFTER_IMPLEMENTATION.md  FULLY_IMPLEMENT_CHECK_THEN_DELETE.md  ISSUES.md  MANIFEST.in  MIGRATION_REPORT.md  Next Steps.md  Next_Steps.md  PACKAGING.md  QUALITY_GATES_STATUS.md  README.md  SCRATCH.md  Spark_Brief.md  VSCODE_SETUP.md  agent_updates.json  ai_context.schema.json  cleanup-macos-cruft.sh  coverage_projects_payload.json  coverage_trends.json  coverage_trends_latest.json  issue_suite.config.yaml  noxfile.py  package-lock.json  performance_report.json  pyproject.toml  pyrightconfig.json  renovate.json  sitecustomize.py  test_config.yaml
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/actions/issuesuite-action/: action.yml
.github/workflows/: ci.yml  dependencies.yml  docs.yml  issuesuite-sync.yml  lint.yml  projects-status.yml  publish.yml  release.yml  test-build.yml  ux-acceptance.yml
.issuesuite_cache/: project_123_cache.json  project_456_cache.json  project_789_cache.json
.trunk/: trunk.yaml
docs/: 2.0_PLANNING_INDEX.md  BUG_HUNT_SUMMARY.md  COMPLETION_SUMMARY.md  EXECUTIVE_SUMMARY_2.0.md  GAP_ANALYSIS_2.0_ROADMAP.md  HIGHLIGHTS_2.0.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE_2.0.md  README.md  RELEASE_CHECKLIST.md  VISUAL_ROADMAP_2.0.md  baseline_report.md  gap_analysis.md  gap_analysis_2025.md  index_mapping_design.md  internal_comms_security_workflow.md  red_team_report.md
docs/adrs/: ADR-0001-starlight-migration.md  ADR-0002-dependency-sync-enforcement.md  ADR-0002-schema-registry-versioning.md  ADR-0003-hermetic-packaging.md  ADR-0003-signed-index-persistence.md  ADR-0004-dev-environment-parity.md  ADR-0004-github-app-authentication.md  ADR-0005-resilient-pip-audit-integration.md  ADR-0006-performance-benchmarking-layer.md  ADR-0007-coverage-threshold-baseline.md  ADR-0008-dev-dependency-vulnerabilities.md  ADR-0009-critical-module-coverage-baselines.md  index.json
docs/archive/: DOCUMENTATION_BEFORE_AFTER.md  DOCUMENTATION_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Next_Steps_legacy.md  README.md  Spark_Brief.md  baseline_report.md  gap_analysis.md  gap_analysis_2025.md  internal_comms_security_workflow.md  red_team_report.md
docs/archive/governance/: frontier_apex.md
docs/explanations/: README.md  architecture.md  documentation-philosophy.md  extensions.md  index-mapping-design.md
docs/governance/: frontier_apex.md
docs/how-to/: README.md  ci-cd.md  homebrew.md  pre-commit.md  vs-code.md
docs/reference/: README.md  cli.md  configuration.md
docs/starlight/: README.md  astro.config.mjs  package-lock.json  package.json
docs/starlight/public/: robots.txt
docs/starlight/src/: env.d.ts
docs/starlight/src/components/: CardGrid.astro  Footer.astro
docs/starlight/src/content/: config.ts
docs/starlight/src/content/docs/: index.mdx
docs/starlight/src/content/docs/explanations/: architecture.mdx  documentation-strategy.mdx  extensions.mdx  index-mapping-design.mdx
docs/starlight/src/content/docs/how-to/: adr-governance.mdx  automation-ci.mdx  docs-automation.mdx  github-projects.mdx  homebrew.mdx  renovate-integration.mdx
docs/starlight/src/content/docs/reference/: cli.mdx  (+3 more)
docs/starlight/src/content/reading/: what-were-reading.json
docs/starlight/src/pages/: index.astro
docs/starlight/src/pages/project/: index.astro
docs/starlight/src/styles/: theme.css  tokens.css
docs/tutorials/: README.md  getting-started.md
packaging/homebrew/: README.md
scripts/: coverage_trends.py  dev-setup.py  generate_performance_report.py  homebrew_formula.py  issuesuite-dx-sweep.sh  issuesuite-preflight.sh  projects_status_report.py  quality_gates.py  refresh-deps.sh  release.py  setup-dev-env.sh  type_coverage_report.py  update_changelog.py  ux_acceptance.py  verify_next_steps.py
src/issuesuite/: __init__.py  __main__.py  advisory_refresh.py  agent_updates.py  ai_context.py  benchmarking.py  bootstrap.py  cli.py  concurrency.py  config.py  context_types.py  core.py  coverage_trends.py  dependency_audit.py  diffing.py  env_auth.py  errors.py  github_auth.py  github_issues.py  github_projects_sync.py  github_rest.py  index_store.py  logging.py  mapping_utils.py  models.py  next_steps_validator.py  observability.py  orchestrator.py  parser.py  performance_report.py  pip_audit_integration.py  plugins.py  project.py  projects_status.py  quality_gates.py  reconcile.py  retry.py  runtime.py  scaffold.py  schema_registry.py  (+5 more)
src/issuesuite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/issuesuite/data/: __init__.py  security_advisories.json  security_allowlist.json
src/issuesuite/templates/bootstrap/: ISSUES.md  agent_updates.json  github_workflow.yml  issue_suite.config.yaml  vscode_tasks.json
src/opentelemetry/: __init__.py
src/opentelemetry/trace/: __init__.py
tests/: conftest.py  test_advisory_refresh.py  test_agent_apply_validation.py  test_ai_context_errors.py  test_ai_context_programmatic.py  test_ai_mode_and_context.py  test_benchmarking.py  test_benchmarking_integration.py  test_bootstrap.py  test_cli_agent_apply.py  test_cli_basic.py  test_cli_extended.py  test_cli_init.py  test_cli_setup.py  test_concurrency.py  test_concurrency_integration.py  test_core_planning.py  test_coverage_trends.py  test_debug_logging.py  test_dependency_audit.py  test_diffing.py  test_doctor_environment_parity.py  test_documentation_structure.py  test_env_auth.py  test_errors.py  test_github_app_auth.py  test_github_app_integration.py  test_github_project_v2.py  test_github_rest_client.py  test_hermetic_installation.py  test_index_store.py  test_issue_suite_sync.py  test_mapping_enrichment.py  test_mapping_persistence.py  test_mapping_stale_prune.py  test_mapping_utils.py  test_milestone_enforcement.py  test_mock_mode.py  test_next_steps_validator.py  test_observability.py  (+35 more)
(+1 files in other folders)
