###############################################
# IssueSuite Standalone pyproject Template    #
# Copy this file to pyproject.toml in the new #
# extraction repository and adjust metadata.  #
###############################################

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "issuesuite"
version = "0.1.5"  # Set at extraction time; keep in sync with issuesuite.__version__
description = "Declarative GitHub Issues automation: validate, sync, export, and report from a single ISSUES.md file"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "IssueSuite Maintainers", email = "maintainers@issuesuite.dev" }]
maintainers = [{ name = "IssueSuite Maintainers", email = "maintainers@issuesuite.dev" }]
keywords = ["github", "issues", "automation", "declarative", "roadmap", "cli", "project-management", "devops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
  "build>=1.0.0",
  "twine>=5.0.0",
]
schemas = [
  "jsonschema>=4.0.0,<5",
]
env = [
  "python-dotenv>=1.0.0",
]
performance = [
  "psutil>=5.9.0",
]
vscode = [
  "python-dotenv>=1.0.0",
  "psutil>=5.9.0",
]
all = [
  "python-dotenv>=1.0.0",
  "psutil>=5.9.0",
  "jsonschema>=4.0.0,<5",
]

[project.urls]
Homepage = "https://github.com/IAmJonoBo/IssueSuite"
Repository = "https://github.com/IAmJonoBo/IssueSuite"
Documentation = "https://github.com/IAmJonoBo/IssueSuite#readme"
Issues = "https://github.com/IAmJonoBo/IssueSuite/issues"
Changelog = "https://github.com/IAmJonoBo/IssueSuite/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/IAmJonoBo/IssueSuite/issues"
"Source Code" = "https://github.com/IAmJonoBo/IssueSuite"

[project.scripts]
issuesuite = "issuesuite.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "PL"]
ignore = ["E501", "PLR0913", "PLR0911"]

[tool.pytest.ini_options]
addopts = ["-q"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
